# ad-hoc-web-ui

./: .env.example  .gitignore  README.md  gunicorn.conf.py  pyproject.toml  run.py  start.py  start_dev  start_simulated_prod
app/: __init__.py  auth.py  config.py  database.py  logging.py  main.py
app/routes/: auth.py
app/static/css/: style.css
app/static/js/: auth.js
app/templates/: base.html  dashboard.html
docs/: nginx_config_example
scripts/: create_admin.py  generate_env_example.py
web/: app.py  auth.py  config.py  database.py  logging.py  main.py  settings.py
web/routes/: auth.py
web/static/js/: auth.js
web/templates/: login.html
