[project]
name = "ad-hoc-web-ui"
version = "0.1.0"
description = "Web UI for ad hoc server creation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "fastapi>=0.128.0",
    "gunicorn>=25.0.1",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "starlette-csrf>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "uvicorn[standard]>=0.40.0",
]
